package com.epam.training.webshop;

public class Product {
}
