package com.epam.training.webshop.presentation.cli.command;

public interface Command {

    String execute();
}
